WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14584
XMLHttpRequest treats null login/password incorrectly
https://bugs.webkit.org/show_bug.cgi?id=14584
Summary
XMLHttpRequest treats null login/password incorrectly
Alexey Proskuryakov
Reported
2007-07-11 11:30:21 PDT
req.open("GET", "test.cgi", false, null, null) - login/password are actually sent as "null"/"null"! This affects GWT (Google Web Toolkit) applications.
Attachments
proposed fix
(16.10 KB, patch)
2007-07-11 13:03 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-07-11 13:03:26 PDT
Created
attachment 15479
[details]
proposed fix
Darin Adler
Comment 2
2007-07-11 13:23:06 PDT
Comment on
attachment 15479
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2007-07-11 21:20:03 PDT
Committed revision 24227.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug