        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=14584
        XMLHttpRequest treats null login/password incorrectly

        Test: http/tests/xmlhttprequest/null-auth.php

        * xml/xmlhttprequest.cpp:
        (WebCore::XMLHttpRequest::open):
        * xml/xmlhttprequest.h:
        Split the open() method into three to distinguish between missing and null credentials.

        * bindings/js/JSXMLHttpRequest.cpp:
        (KJS::JSXMLHttpRequestPrototypeFunction::callAsFunction): Call the appropriate open().



Canonical link: https://commits.webkit.org/18918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24227 268f45cc-cd09-0410-ab3c-d52691b4dbfc