third_party/WebKit/LayoutTests/http/tests/xmlhttprequest/null-auth.php
@@ -1,0 +1,13 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<p>Test that null values in XHR login/password parameters are treated correctly.</p>
+<p>No auth tokens should be sent with this request.</p>
+<pre id='syncResult'> </pre>
+<script>
+if (window.layoutTestController)
+  layoutTestController.dumpAsText();
+
+req = new XMLHttpRequest;
+req.open('POST', '<?php echo 'http://foo:bar@' . $_SERVER['HTTP_HOST'] . '/xmlhttprequest/resources/echo-auth.php' ?>', false, null, null);
+req.send();
+document.getElementById('syncResult').firstChild.nodeValue = req.responseText;
+</script>
